don't render gitignore

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         id="folderForm"
         method="POST"
         action="/"
-        class="bg-white p-8 rounded-lg shadow-md max-w-lg mx-auto space-y-6"
+        class="bg-white p-8 rounded-lg shadow-md mx-auto space-y-6"
       >
         <div id="repo_input_container" style="display: none">
           <label for="repo_input" class="block text-gray-700 font-semibold"
