--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,18 @@
     <title>Folder Structure Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+  <a href="https://github.com/av-feaster/folder-structure-generator">
   <body class="bg-gray-100 font-sans">
+    <button class="flex items-center space-x-2 px-4 py-2 bg-gray-800 text-white rounded-lg border border-gray-600 hover:bg-gray-700 hover:border-gray-500 " style="
+    position: fixed;
+    right: 8px;
+    top: 12px;">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5 text-pink-500">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+      </svg>
+      <span>Sponsor</span>
+    </button>
+  </a>
     <div class="container mx-auto p-8">
       <h1 class="text-4xl font-bold text-center text-indigo-600 mb-8">
         Folder Structure Generator
